[project]
name = "ml-house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
